Change name to dppcmd, move to dppcmd namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(dpp-command-handler)
+add_library(dppcmd)
 
-set_target_properties(dpp-command-handler
+set_target_properties(dppcmd
     PROPERTIES
         CXX_STANDARD 20
         CXX_STANDARD_REQUIRED ON)
@@ -10,59 +10,59 @@ option(USE_COROUTINES "Use DPP coroutine support." OFF)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 if(USE_COROUTINES)
-    target_compile_definitions(dpp-command-handler PUBLIC DPP_CORO)
+    target_compile_definitions(dppcmd PUBLIC DPP_CORO)
 endif()
 
-target_sources(dpp-command-handler
+target_sources(dppcmd
     PRIVATE
-        dpp-command-handler/commands/commandinfo.cpp
-        dpp-command-handler/commands/commandparser.cpp
-        dpp-command-handler/commands/exceptions.cpp
-        dpp-command-handler/extensions/cache.cpp
-        dpp-command-handler/modules/modulebase.cpp
-        dpp-command-handler/readers/channeltypereader.cpp
-        dpp-command-handler/readers/guildmembertypereader.cpp
-        dpp-command-handler/readers/roletypereader.cpp
-        dpp-command-handler/readers/usertypereader.cpp
-        dpp-command-handler/services/basecommandservice.cpp
-        dpp-command-handler/services/commandservice.cpp
-        dpp-command-handler/services/moduleservice.cpp
-        dpp-command-handler/utils/lexical_cast.cpp
-        dpp-command-handler/utils/mentions.cpp
-        dpp-command-handler/utils/strings.cpp
+	dppcmd/commands/commandinfo.cpp
+	dppcmd/commands/commandparser.cpp
+	dppcmd/commands/exceptions.cpp
+	dppcmd/extensions/cache.cpp
+	dppcmd/modules/modulebase.cpp
+	dppcmd/readers/channeltypereader.cpp
+	dppcmd/readers/guildmembertypereader.cpp
+	dppcmd/readers/roletypereader.cpp
+	dppcmd/readers/usertypereader.cpp
+	dppcmd/services/basecommandservice.cpp
+	dppcmd/services/commandservice.cpp
+	dppcmd/services/moduleservice.cpp
+	dppcmd/utils/lexical_cast.cpp
+	dppcmd/utils/mentions.cpp
+	dppcmd/utils/strings.cpp
     PUBLIC
         FILE_SET HEADERS FILES
-            dpp-command-handler/commands/commandexecution.h
-            dpp-command-handler/commands/commandfunction.h
-            dpp-command-handler/commands/commandinfo.h
-            dpp-command-handler/commands/commandparser.h
-            dpp-command-handler/commands/exceptions.h
-            dpp-command-handler/commands/precondition.h
-            dpp-command-handler/commands/remainder.h
-            dpp-command-handler/extensions/cache.h
-            dpp-command-handler/modules/module.h
-            dpp-command-handler/modules/modulebase.h
-            dpp-command-handler/readers/channeltypereader.h
-            dpp-command-handler/readers/guildmembertypereader.h
-            dpp-command-handler/readers/roletypereader.h
-            dpp-command-handler/readers/typereader.h
-            dpp-command-handler/readers/usertypereader.h
-            dpp-command-handler/results/commanderror.h
-            dpp-command-handler/results/commandresult.h
-            dpp-command-handler/results/preconditionresult.h
-            dpp-command-handler/results/result.h
-            dpp-command-handler/results/typereaderresult.h
-            dpp-command-handler/services/basecommandservice.h
-            dpp-command-handler/services/commandservice.h
-            dpp-command-handler/services/moduleservice.h
-            dpp-command-handler/utils/ezcoro.h
-            dpp-command-handler/utils/function_traits.h
-            dpp-command-handler/utils/join.h
-            dpp-command-handler/utils/lexical_cast.h
-            dpp-command-handler/utils/mentions.h
-            dpp-command-handler/utils/strings.h
-            dpp-command-handler/utils/tuple_traits.h
-            dpp-command-handler/utils/type_traits.h)
+	    dppcmd/commands/commandexecution.h
+	    dppcmd/commands/commandfunction.h
+	    dppcmd/commands/commandinfo.h
+	    dppcmd/commands/commandparser.h
+	    dppcmd/commands/exceptions.h
+	    dppcmd/commands/precondition.h
+	    dppcmd/commands/remainder.h
+	    dppcmd/extensions/cache.h
+	    dppcmd/modules/module.h
+	    dppcmd/modules/modulebase.h
+	    dppcmd/readers/channeltypereader.h
+	    dppcmd/readers/guildmembertypereader.h
+	    dppcmd/readers/roletypereader.h
+	    dppcmd/readers/typereader.h
+	    dppcmd/readers/usertypereader.h
+	    dppcmd/results/commanderror.h
+	    dppcmd/results/commandresult.h
+	    dppcmd/results/preconditionresult.h
+	    dppcmd/results/result.h
+	    dppcmd/results/typereaderresult.h
+	    dppcmd/services/basecommandservice.h
+	    dppcmd/services/commandservice.h
+	    dppcmd/services/moduleservice.h
+	    dppcmd/utils/ezcoro.h
+	    dppcmd/utils/function_traits.h
+	    dppcmd/utils/join.h
+	    dppcmd/utils/lexical_cast.h
+	    dppcmd/utils/mentions.h
+	    dppcmd/utils/strings.h
+	    dppcmd/utils/tuple_traits.h
+	    dppcmd/utils/type_traits.h)
 
 find_package(DPP REQUIRED)
-target_link_libraries(dpp-command-handler PUBLIC dpp::dpp)
+target_link_libraries(dppcmd PUBLIC dpp::dpp)
